force-app/main/default/objects/CloneOpp__Clone_Opportunity_Setting__mdt/CloneOpp__Clone_Opportunity_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configure clone opportunity product layout.</description>
    <label>Clone Opportunity Setting</label>
    <pluralLabel>Clone Opportunity Settings</pluralLabel>
</CustomObject>