force-app/main/default/objects/CloneOpp__Clone_Opportunity_Setting__mdt/fields/CloneOpp__Cloneable__c.field-meta.xml
<CustomField>
    <fullName>CloneOpp__Cloneable__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Make the column cloneable in products layout. If a column is set to non-editable and cloneable then it&apos;s value will be cloned.</inlineHelpText>
    <label>Cloneable</label>
    <type>Checkbox</type>
</CustomField>