force-app/main/default/objects/CloneOpp__Clone_Opportunity_Setting__mdt/fields/CloneOpp__Editable__c.field-meta.xml
<CustomField>
    <fullName>CloneOpp__Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make the column editable in products layout.</inlineHelpText>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>