force-app/main/default/objects/CloneOpp__Clone_Opportunity_Setting__mdt/fields/CloneOpp__Initial_Width__c.field-meta.xml
<CustomField>
    <fullName>CloneOpp__Initial_Width__c</fullName>
    <label>Initial Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>