force-app/main/default/objects/CloneOpp__Clone_Opportunity_Setting__mdt/fields/CloneOpp__Required__c.field-meta.xml
<CustomField>
    <fullName>CloneOpp__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make the column required in products layout.</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>