force-app/main/default/objects/CloneOpp__Clone_Opportunity_Setting__mdt/fields/CloneOpp__Sortable__c.field-meta.xml
<CustomField>
    <fullName>CloneOpp__Sortable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make the column sortable in products layout.</inlineHelpText>
    <label>Sortable</label>
    <type>Checkbox</type>
</CustomField>